[package]
name = "iceoryx-rs"
version = "0.0.10"
authors = ["Mathias »Bob« Kraus <k.hias@gmx.de>"]
edition = "2018"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "iceoryx_rs"

[build-dependencies]
cpp_build = "0.5"

[dependencies]
cpp = "0.5"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
