[package]
edition = "2018"
name = "iceoryx-rs"
version = "0.0.10"
authors = ["elBoberido <k.hias@gmx.de>"]
build = "build.rs"
description = "Rust wrapper for Eclipse iceoryx - true zero-copy inter-process communication"
keywords = [
    "zero-copy",
    "shared-memory",
    "inter-process",
    "publish-subscribe",
    "request-response"
]
license = "Apache-2.0"
repository = "https://github.com/eclipse-iceoryx/iceoryx-rs"

[lib]
name = "iceoryx_rs"

[build-dependencies]
cpp_build = "0.5"

[dependencies]
cpp = "0.5"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
