[workspace]
members = [
    "iceoryx-sys"
]

[package]
edition = "2018"
name = "iceoryx-rs"
version = "0.0.13"
authors = ["elBoberido <k.hias@gmx.de>"]
description = "Idiomatic Rust bindings to Eclipse iceoryx - true zero-copy inter-process communication"
readme = "README.md"
keywords = [
    "zero-copy",
    "shared-memory",
    "inter-process",
    "publish-subscribe",
    "request-response"
]
license = "Apache-2.0"
repository = "https://github.com/eclipse-iceoryx/iceoryx-rs"

[lib]
name = "iceoryx_rs"

[dependencies]
ffi = { package = "iceoryx-sys", version = "0.0.13", path = "./iceoryx-sys" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
