[package]
edition = "2018"
name = "iceoryx-sys"
version = "0.0.13"
authors = ["elBoberido <k.hias@gmx.de>"]
build = "build.rs"
description = "Low level bindings to Eclipse iceoryx"
keywords = [
    "zero-copy",
    "shared-memory",
    "inter-process",
    "publish-subscribe",
    "request-response"
]
license = "Apache-2.0"
repository = "https://github.com/eclipse-iceoryx/iceoryx-rs"

[lib]
name = "iceoryx_sys"

[build-dependencies]
cpp_build = "0.5"

[dependencies]
cpp = "0.5"
thiserror = "1.0"
